# particle_simulation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main_scemo.cpp
analyser/: CMakeLists.txt
analyser/include/: ParticleStorage.hpp  analyserGraphics.hpp  particleAnalyser.hpp  particleStorage.hpp  particleStorageStructures.hpp
analyser/include/dataStructures/: genCheckResult.hpp  signalFitResult.hpp
analyser/src/: analyser.cpp  analyserGraphics.cpp  particleAnalyser.cpp  particleStorage.cpp
analyser/src/dataStructures/: genCheckResult.cpp  signalFitResult.cpp
main/: CMakeLists.txt  ProgramModules.cmake
main/dictionary/: Linkdef.h  stl.h
main/include/Application/: Application.hpp
main/include/generator/: ParticleGenerator.cpp  ParticleGenerator.hpp  ProportionGenerator.hpp
main/include/particles/: Particle.hpp  ParticleType.hpp  ResonanceType.hpp
main/src/: main.cpp
main/src/Application/: Application.cpp
main/src/generator/: ParticleGenerator.cpp  ParticleGenerator.hpp  ProportionGenerator.cpp
main/src/particles/: Particle.cpp  ParticleType.cpp  ResonanceType.cpp
project-config/: CompilerFlags.cmake  Config.cmake  Configuration.cmake  Dependencies.cmake  Libraries.cmake  ProgramModules.cmake  Settings.cmake  Targets.cmake
project-config/targets/: TargetMain.cmake
src/: main.cpp
templates/: Definitions.hpp.in
tests/unit/particleTest/: CMakeLists.txt  particleTest.test.cpp
tests/unit/sample/: CMakeLists.txt  sample_test.test.cpp
